# resolve

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  docker.environment.yml  environment-ci.yml  environment-dev.yml  environment-rtd.yml  environment.yml  pyproject.toml  requirements-rtd.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: doc_request.md
.github/workflows/: bump-version.yml  pre-commit.yml  semantic-pull-request.yml  testing.yml
data-test/interim/assets/: Asset.csv
data-test/interim/candidate_fuels/: Electrolytic Hydrogen.csv  Fossil_Natural_Gas.csv  Hydrogen.csv  Natural_Gas.csv
data-test/interim/electrolyzers/: Electrolyzer_1.csv  Hydrogen Electrolysis.csv
data-test/interim/final_fuels/: Hydrogen Demand.csv  Hydrogen_Demand.csv  Hydrogen_Demand_profile.csv
data-test/interim/fuel_conversion_plants/: SMR.csv
data-test/interim/fuel_storages/: Hydrogen_Storage.csv
data-test/interim/fuel_transportations/: Hydrogen_Pipeline.csv
data-test/interim/linkages/: all_to_policies.csv  assets_to_elcc.csv  biomass_resources_to_candidate_fuels.csv  candidate_fuels_to_final_fuels.csv  fuel_zones_to_fuel_transportations.csv  hybrid_resources.csv  loads_to_reserves.csv  reserves_to_zones.csv  resources_to_reserves.csv  zones_to_tx_paths.csv
data-test/interim/loads/: zone_1.csv  zone_1_BE.csv  zone_2.csv  zone_2_BE.csv
data-test/interim/outage_distributions/: outage_dist_1.csv
data-test/interim/policies/: CO2.csv  PRM.csv  RPS.csv
data-test/interim/reserves/: downward_reg.csv  regulating_up.csv  upward_reg_mw.csv
data-test/interim/resource_groups/: DR.csv  Firm.csv  Flex.csv  Generic.csv  HybridBatteryStorage.csv  Hydro.csv  Long_Duration_Storage.csv  Solar.csv  Thermal.csv  Wind.csv
data-test/interim/resources/: Battery.csv  CA_DR.csv  EV_V2G.csv  Electrofuels_Wind.csv  Electrofuels_Wind_profile.csv  Gas_CCGT.csv  Gas_CCGT_2.csv  Gas_CT.csv  Hydrogen_CCGT.csv  Solar.csv  Wind.csv
data-test/interim/system_costs/: Customer Costs.csv  RR.csv
data-test/interim/tx_paths/: TxPath.csv
data-test/interim/zones/: CAISO.csv  ISONE.csv
data-test/profiles/: ev_v2g_increase_load.csv  ev_v2g_provide_power.csv  solar-reserve.csv  solar_profile.csv  upward_reg_mw.csv
data-test/raw/: ERA5_download_readme.md
data-test/settings/resolve/: cases_to_run.csv
data-tpp/hydro/paverage/: NW_Hydro.csv  PGE_Hydro.csv
data-tpp/hydro/pmax/: BANC_Hydro.csv
data-tpp/hydro/pmin/: LDWP_Hydro.csv  SCE_Hydro.csv
data-tpp/loads/2021/: Placeholder.csv
data-tpp/profiles/reserves/: load_to_lf_down.csv  solar_to_reg_up.csv
data-tpp/reserves/: solar_to_reg_down.csv  wind_to_reg_down.csv  wind_to_reg_up.csv
data-tpp/shift dr/daily budget/: com_Lighting_025.csv  com_Office Equipment_025.csv  com_Space cooling_025.csv  ind_Process_025.csv  res_LDEV_025.csv
data-tpp/shift dr/shed/: CA_LDV_2030_T37_cor4_v1g_R2_work_l2_V2G.csv
data-tpp/shift dr/take/: CA_LDV_2030_T37_cor4_v1g_R2_work_l2_V2G.csv
data/hydro/paverage/: BANC_Hydro.csv  CAISO_Hydro copy.csv
data/hydro/pmax/: NW_Hydro.csv  SW_Hydro.csv
data/hydro/pmin/: CAISO_Hydro.csv
data/loads/2023/: SCE-agg.csv
data/reserves/: load_to_reg_down.csv  solar_to_lf_down.csv
data/shift dr/daily budget/: CA_LDV_2030_T37_cor4_v1g_R2_home_l2_V2G.csv  ind_Ind. heat_025.csv  res_Lighting_025.csv
docs/: Makefile  make.bat
docs/_templates/: comments.html
docs/_templates/partials/: comments.html
docs/_themes/furo_giscus/: theme.conf
docs/source/: comparing_cases.md  conf.py  creating_inputs.md  definitions_test.md  getting_started.md  index.md  running_resolve.md  scenario_tool.md  viewing_results.md
docs/source/2025 CPUC IRP Files/: index.md
docs/source/Bad Stuff/: Errors.md  Troubleshooting.md  index.md
new_modeling_toolkit/cli/: __init__.py  new.py
new_modeling_toolkit/common/: load_component.py  reserve.py  system.py  temporal.py  zone.py
new_modeling_toolkit/core/: __init__.py  component.py  custom_model.py  linkage.py  model.py  three_way_linkage.py
new_modeling_toolkit/resolve/: __init__.py  export_results.py  export_results_summary.py  model_formulation.py  results_viewers.py  run_opt.py  scenario_tool.py  settings.py
new_modeling_toolkit/system/: asset.py  policy.py
new_modeling_toolkit/ui/: ResolveToRecap.py  __init__.py  runTerminalCommand-0.24.0.applescript  scenario_tool.py
new_modeling_toolkit/visualization/: e3_plotly.py
notebooks/: Case Comparison Workbook Template.xlsx  RESOLVE Dispatch Viewer.ipynb  RV and Case Comparison Script.ipynb  Resolve Results Viewer - Template.xlsx  cluster.py  results_viewer.py
src/resolve/: __init__.py
tests/resolve/: test_run_opt.py
(+263 files in other folders)
