[project]
name="resolve"
description="Resolve capacity expansion model."
version="0.1.0"
authors=[
    { name = "Energy and Environmental Economics, Inc." }
]
requires-python = ">=3.9,<3.11"
dependencies = [
    "highspy==1.5.3",
    "ipywidgets==8.0.4",
    "joblib==1.2.0",
    "jupyterlab==3.5.3",
    "jupytext==1.15.1",
    "kmedoids==0.4.3",
    "line-profiler==4.0.3",
    "loguru==0.6.0",
    "matplotlib==3.6.3",
    "nrel-pysam==4.0.0",       # PySAM install doesn't seem to work for Python 3.11
    "numpy==1.24.1",
    "pandas==1.5.3",
    "pint==0.20.1",
    "plotly==5.13.0",
    "pydantic==1.10.8",
    "pyomo==6.4.4",
    "rich==13.3.1",
    "s3fs==2023.9.0",
    "scikit-learn==1.2.1",
    "scipy==1.10.0",
    "seaborn==0.12.2",
    "tqdm==4.64.1",
    "typer==0.7.0",
    "ujson==5.8.0",
    "universal-pathlib==0.1.3",
]

[project.optional-dependencies]
ui = [
    "xlwings==0.29.0",
    "python-pptx==0.6.21",
]
dev = [
    "autodoc_pydantic==1.8.0",
    "commitizen==3.2.2",
    "darker==1.6.1",
    "furo==2022.12.7",
    "graphviz==0.20.1",
    "myst-parser==0.18.1",
    "pre-commit==3.0.2",
    "pytest==7.2.1",
    "pytest-sugar==0.9.6",
    "sphinx==5.3.0",
    "sphinx-copybutton==0.5.1",
    "sphinx-design==0.3.0",
]

ml = [
    "tensorflow",
]

climate = [
    "cdsapi",
    "cfgrib",
    "multiprocess",
    "pvlib-python"
]

[tool.setuptools]
packages = ["resolve"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"resolve.common" = ["units.csv"]

[tool.black]
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true